feat: 크롤링 작업 시작하자마자 되도록 구현 (#41)